--- a/src/components/style.css
+++ b/src/components/style.css
@@ -10,6 +10,10 @@
     --orange: #e6a175;
     --marigold: #f2c974;
 }
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 /* Flex Settings */
 
 header {
