--- a/src/components/LoginHTML.astro
+++ b/src/components/LoginHTML.astro
@@ -1,4 +1,4 @@
-<form action="http://localhost:5000/login" method="POST">
+<form action="http://localhost:5000/api/auth/login" method="POST">
     <fieldset>
         <ol>
             <li>
