--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -15,7 +15,7 @@ import "../components/style.css"
     
     <BasicHeader/>
     <main>
-           
+        <slot/>
     </main>
     <BasicFooter/>
 </body>
