--- a/src/components/style.css
+++ b/src/components/style.css
@@ -67,3 +67,38 @@ footer {
 footer a {
     color: var(--marigold);
 }
+
+.chatterbox {
+    margin: 1rem;
+    background-color: var(--orange);
+    border: 2px solid var(--darkblue);
+    border-radius: .15rem;
+    padding: 1rem;
+}
+
+.chatbox-textarea {
+    border: 2px solid var(--darkblue);
+    border-radius: .15rem;
+    padding: .5rem;
+    resize: none;
+    width: 30ch;
+}
+
+.chat-button {
+    border: 2px solid var(--darkblue);
+    border-radius: .15rem;
+    padding: .5rem;
+    color: var(--darkblue);
+    font-weight: 600;
+}
+
+.chat-button:hover {
+    border: 2px solid var(--offwhite);
+    background-color: var(--darkblue);
+    color: var(--offwhite);
+}
+
+.chat-button:active {
+    background-color: var(--marigold);
+    color: var(--darkblue)
+}
