--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,4 @@
 ---
-import Basic from "../layouts/Basic.astro"
-import ChatWindow from "../components/ChatWindow.svelte";
+import Login from "../layouts/Login.astro"
 ---
-<Basic/>
-
-
+<Login/>
