--- a/src/components/style.css
+++ b/src/components/style.css
@@ -70,7 +70,7 @@ footer a {
 
 .chatterbox {
     margin: 1rem;
-    background-color: var(--orange);
+    background-color: var(--marigold);
     border: 2px solid var(--darkblue);
     border-radius: .15rem;
     padding: 1rem;
